--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -9,6 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+
+        <div aria-live="polite" aria-atomic="true" class="position-relative">
+            <div class="toast-container top-0 end-0 p-3">
+
+
+            </div>
+        </div>
+
         <nav class="navbar sticky-top bg-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
