after creating the part the search refreshes with the last search and the add modal hides automaticly

--- a/django_project/hub/templates/hub/modules/form_modal.html
+++ b/django_project/hub/templates/hub/modules/form_modal.html
@@ -34,7 +34,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
-                    <button type="submit" class="btn btn-success" id="addButton">Add</button>
+                    <button type="submit" class="btn btn-success" id="addButton" data-bs-dismiss="modal" >Add</button>
                 </form>
 
             </div>
@@ -57,6 +57,7 @@
                 data: form.serialize(), // serializes the form's elements.
                 success: function(data)
                 {
+                    lResults($('#{{searchFieldName}}').val());
                     $(".toast-container").append(data);
                 }
             });
