--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -11,7 +11,7 @@
     <body>
 
         <div aria-live="polite" aria-atomic="true" class="position-relative">
-            <div class="toast-container top-0 end-0 p-3">
+            <div class="toast-container position-fixed top-0 end-0 p-3">
 
 
             </div>
