--- a/django_project/hub/templates/hub/modules/delete_modal.html
+++ b/django_project/hub/templates/hub/modules/delete_modal.html
@@ -12,13 +12,15 @@
                 <p>
                     do you realy want to delete these items:
                 </p>
-                <ul id="del_list">
+                <ul id="delList">
                     
                 </ul>
 
                 
-                <form method="POST" action="{{name}}">
-                    <button type="submit" class="btn btn-danger" name="sub_">Delete</button>
+                <form id="delForm" method="POST" action="./del">
+                    
+                    {% csrf_token %}
+                    <button type="submit" id="delButton" class="btn btn-danger" name="sub_">Delete</button>
                 </form>
 
             </div>
@@ -28,13 +30,49 @@
 
 <script>
 
-    $(document).on("change", ".checkboxlist", function(){
+    $(document).on("change", "#checkAll", function(){
         if(this.checked){
-            $("#del_list").append("<li id='"+ this.id +"_'> "+ this.value +" </li>");
+            $(".checkboxlist").each(function(){
+                $("#delList").append("<li class='"+ this.id +"_'> "+ this.value +" </li>");
+                $("#delForm").append("<input type=\"hidden\" name='_"+ this.id +"' class='"+ this.id +"_' value="+ this.id +"> ");
+            });
         }else{
-            $("#"+ this.id +"_").remove();
+            $(".checkboxlist").each(function(){
+                $("."+ this.id +"_").remove();
+            });
         }
     });
 
+    $(document).on("change", ".checkboxlist", function(){
+        if(this.checked){
+            $("#delList").append("<li class='"+ this.id +"_'> "+ this.value +" </li>");
+            $("#delForm").append("<input type=\"hidden\" name='_"+ this.id +"' class='"+ this.id +"_' value="+ this.id +"> ");
+        }else{
+            $("."+ this.id +"_").remove();
+        }
+    });
+
+    $("#delButton").on("click", function(){
+        $("#delForm").submit(function(e){
+            e.preventDefault();
+
+            var form = $(this);
+            var actionUrl = form.attr('action');
+    
+            $.ajax({
+                type: "POST",
+                url: actionUrl,
+                data: form.serialize(), // serializes the form's elements.
+                success: function(data)
+                {
+                    lResults($('#{{searchFieldName}}').val());
+                    $(".toast-container").append(data);
+                    $(".checkboxlist").each(function(){
+                    $("."+ this.id +"_").remove();
+            });
+                }
+            });
+        });
+    });
 </script>
 
