--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -38,6 +38,8 @@
             <th scope="col">Code</th>
 
         {% endif %}
+            <th scope="col">Edit</th>
+            <th scope="col">View</th>
         </tr>
     </thead>
 
