changed the warehouse model to be more dynamic

--- a/django_project/part/templates/part/parts.html
+++ b/django_project/part/templates/part/parts.html
@@ -12,4 +12,6 @@
 {% include "hub/modules/form_modal.html" with typ=typ %}
 {% include "hub/modules/delete_modal.html" %}
 
+{% include "hub/modules/single_modal.html" with typ=typ name="neoder" %}
+
 {% endblock %}
