--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -8,7 +8,7 @@
 
         {% if l == "Part" %}
 
-        {% for t in type %}
+        {% for t in paType %}
         <div class="col-6 col-sm-4 p-2">
 
             <a class="card-block text-decorations-none" href="part/{{t.tName|lower}}">
@@ -21,6 +21,23 @@
         </div> 
 
         {% endfor %}
+
+        {% elif l == "Storage" %}
+
+        {% for t in stType %}
+        <div class="col-6 col-sm-4 p-2">
+
+            <a class="card-block text-decorations-none" href="storage/{{t.name|lower}}">
+                <div class="card p-2 justify-content-between align-items-center">
+                    <div class"=card-body ">
+                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.symbol|add:'.svg' %}">
+                    </div>
+                </div>
+            </a>
+        </div> 
+
+        {% endfor %}
+
         {% else %}
         <div class="col-6 col-sm-4 p-2">
 
