chaned the app name from part to article is more fitting

--- a/django_project/article/templates/article/modules/article.html
+++ b/django_project/article/templates/article/modules/article.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-{% include "part/modules/partIncert.html" %}
+{% include "article/modules/articleIncert.html" %}
 
 {% endblock %}
