--- a/django_project/article/templates/article/modules/articleIncert.html
+++ b/django_project/article/templates/article/modules/articleIncert.html
@@ -1,4 +1,4 @@
-<h1> {{ part.template.name }} </h1>
+<h1> {{ article.template.name }} </h1>
 <form method="POST" action="{{name}}">
     {% csrf_token %}
 
