--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -7,7 +7,7 @@
                 <input class="checkboxlist form-check-input" type="checkbox" value="{{r}}" id="{{ r.id }}">
             </td>
 
-            {% if type == "part" %}
+            {% if type == "article" %}
             <td class='itemClick_'>{{ r.template.name }}</td>
             <td class='itemClick_'>{{r.code}}</td>
             <td class='itemClick_'>{{r.count}}</td>
