--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -23,7 +23,7 @@
             <th scope="col">
                 <input class="form-check-input" type="checkbox" value="" id="checkAll" onclick="eventCheckBox()">
             </th>
-        {% if type == "part" %}
+        {% if type == "article" %}
             <th scope="col">Name</th>
             <th scope="col">Code</th>
             <th scope="col">Anzahl</th>
