changed that no value is given to the var on init to fix a bug

--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -61,7 +61,7 @@
             }
         }
 
-        var scanBuffer = "*"
+        var scanBuffer
 
         function lResults(search){
             if(search!=scanBuffer){
