fiexed that the modal closes even wenn Forum not submited

--- a/django_project/hub/templates/hub/modules/form_modal.html
+++ b/django_project/hub/templates/hub/modules/form_modal.html
@@ -34,7 +34,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
-                    <button type="submit" class="btn btn-success" id="addButton" data-bs-dismiss="modal" >Add</button>
+                    <button type="submit" class="btn btn-success" id="addButton" >Add</button>
                 </form>
 
             </div>
@@ -60,6 +60,8 @@
                 {
                     lResults($('#{{searchFieldName}}').val());
                     $(".toast-container").append(data);
+
+                    $("#add{{ name }}").modal("hide")
 
                 }
             });
