fixed problem with lage type Name and the search results not showing

--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex p-2">
     <div class="input-group">
-        <input id={{searchFieldName}} placeholder="Suche" class="form-control">
+        <input id={{searchFieldName}} placeholder="search" class="form-control">
   <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#switchQRSearch" aria-expanded="false" aria-controls="switchQRSearch">
       QR
   </button>
