--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -1,5 +1,3 @@
-
-
 <!-- ____________________________Search Bar______________________________________ -->
 
 <div class="d-flex p-2">
@@ -48,10 +46,26 @@
 
 </table>
 
+<div class="modal fade" id="singleModal" tabindex="-1" aria-labelledby="singleModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body" id="singleModalBody">
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- ____________________________SCRIPTS______________________________________ -->
 
 <script>
-
 
         function eventCheckBox(){
             if ($("#checkAll").prop("checked")){
@@ -71,6 +85,16 @@
                 }
                 $.get("/module/search/results?type={{ type }}&ptype={{name}}&search="+search, function(data){
                     $("#results").html(data)
+
+                    $(":button.itemClickEdit").click(function(){
+
+                        console.log($(this).val())
+                        $.get("./"+$(this).val()+"/i", function(data){
+                            $("#singleModalBody").html(data)
+                            $("#singleModal").modal("show")
+
+                        })
+                    })
                 });
             }
         }
@@ -80,4 +104,5 @@
         $("#{{searchFieldName}}").on("input", function(){
             lResults($('#{{searchFieldName}}').val())
         });
+        
 </script>
