changed that the single item view uses the modal.html

--- a/django_project/hub/templates/hub/modules/items.html
+++ b/django_project/hub/templates/hub/modules/items.html
@@ -11,5 +11,6 @@
 
 {% include "hub/modules/formModal.html" with modalId="Add"%}
 {% include "hub/modules/deleteModal.html" with modalId="Del" %}
+{% include "hub/modules/deleteModal.html" with modalId="single" %}
 
 {% endblock %}
