toasts hide now after some time

--- a/django_project/hub/templates/hub/modules/toast.html
+++ b/django_project/hub/templates/hub/modules/toast.html
@@ -1,5 +1,5 @@
 
-<div class="toast fade show" role="{{toastType}}" aria-live="assertive" aria-atomic="true">
+<div class="toast" data-bs-delay="5000" role="{{toastType}}" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
         <strong class="me-auto">{{toastName}}</strong>
         <small class="text-muted toastTimeCounter"></small>
@@ -11,3 +11,9 @@
         </p>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        $('.toast').toast('show');
+    })
+</script>
