--- a/django_project/hub/templates/hub/modules/modal.html
+++ b/django_project/hub/templates/hub/modules/modal.html
@@ -12,6 +12,8 @@
             </div>
 
             <div class="modal-body" id="modalBody{{modalId}}">
+                <div id="modalBodyAddon{{modalId}}">
+                </div>
                 {% block body %}
 
                 {% endblock %}
