--- a/django_project/hub/templates/hub/modules/itemForm.html
+++ b/django_project/hub/templates/hub/modules/itemForm.html
@@ -1,5 +1,5 @@
 
-<form method="POST" action="./{{ actionType }}}" id="{{ actionType }}Form">
+<form method="POST" action="./{{id}}/{{ actionType }}" id="{{ actionType }}Form">
     {% csrf_token %}
 
     {% for p_form in form %}
@@ -12,4 +12,31 @@
             </div>
         {% endfor %}
     {% endfor %}
+    <button type="submit" class="btn btn-success" id="{{actionType}}Button" >{{actionType}}</button>
 </form>
+
+    <script>
+        $("#{{actionType}}Button").on("click", function(){
+            $("#{{actionType}}Form").submit(function(e){
+                e.preventDefault();
+                e.stopImmediatePropagation();
+
+                var form = $(this);
+                var actionUrl = form.attr('action');
+        
+                $.ajax({
+                    type: "POST",
+                    url: actionUrl,
+                    data: form.serialize(), // serializes the form's elements.
+                    success: function(data)
+                    {
+                        lResults($('#{{searchFieldName}}').val());
+                        $(".toast-container").append(data);
+                        $("#modal{{modalId}}").modal("hide");
+                    }
+                });
+
+                return false;
+            });
+        });
+    </script>
