--- a/django_project/hub/templates/hub/modules/modal.html
+++ b/django_project/hub/templates/hub/modules/modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
 
             <div class="modal-header">
-                <h5 class="modal-title" id="addLocationLabel">
+                <h5 class="modal-title" id="modalTitle{{modalId}}">
                     {% block title %}
 
                     {% endblock %}
