--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -23,18 +23,16 @@
             </th>
         {% if type == "article" %}
             <th scope="col">Name</th>
-            <th scope="col">Code</th>
             <th scope="col">Anzahl</th>
 
         {% elif type == "location" %}
             <th scope="col">Name</th>
 
-        {% elif type == "shelf" %}
-            <th scope="col">Code</th>
+        {% elif type == "storage" %}
+            <th scope="col">Name</th>
 
         {% else %}
             <th scope="col">Name</th>
-            <th scope="col">Code</th>
 
         {% endif %}
             <th scope="col">Edit</th>
