moved tag in its own application and implemented all features

--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -15,6 +15,9 @@
             {% elif type == "location" %}
             <td>{{ r }}</td>
 
+            {% elif type == "tag" %}
+            <td>{{ r }}</td>
+
             {% elif type == "storage" %}
             <td>{{ r.name }}</td>
 
