--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -31,6 +31,10 @@
         {% elif type == "storage" %}
             <th scope="col">Name</th>
 
+        {% elif type == "code" %}
+            <th scope="col">Code</th>
+            <th scope="col">used</th>
+
         {% else %}
             <th scope="col">Name</th>
 
