removed the Template

--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -9,7 +9,7 @@
             </td>
 
             {% if type == "article" %}
-            <td class='itemClick_'>{{ r.template.name }}</td>
+            <td class='itemClick_'>{{ r.name }}</td>
             <td class='itemClick_'>{{r.count}}</td>
 
             {% elif type == "location" %}
