addet select2 for a few forum fields

--- a/django_project/hub/templates/hub/modules/formModal.html
+++ b/django_project/hub/templates/hub/modules/formModal.html
@@ -20,6 +20,18 @@
     </form>
 
     <script>
+        $("#id_tag").select2({
+            theme: "bootstrap-5",
+            dropdownParent: $("#modal{{modalId}}"),
+            width: "100%",
+            placeholder: "Select tags"
+        });
+        $("#id_unit").select2({
+            theme: "bootstrap-5",
+            dropdownParent: $("#modal{{modalId}}"),
+            width: "100%",
+            placeholder: "Select unit"
+        });
         $("#addButton").on("click", function(){
             $("#addForm").submit(function(e){
                 e.preventDefault();
