--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -3,10 +3,13 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'hub/bootstrap/css/bootstrap.min.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
         <script src="{% static 'hub/jquery/jquery.min.js' %}"></script>
         <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'hub/qrcodescanner/html5-qrcode.min.js' %}"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     </head>
     <body>
 
